--- a/data-engineer.html
+++ b/data-engineer.html
@@ -73,7 +73,7 @@
 <p><span class="badge badge-light">San Jose, California  Santa Clara, California  San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/properly/jobs/4500375002'>Job Application for Data Engineer at Properly</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/properly/jobs/4500375002'>Job Application for Data Engineer at Properly</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -92,6 +92,37 @@
 <h5><a href='https://rek-swiss.join.com/jobs/467841-data-engineer-data-analyst-im-agilen-umfeld'>Job @ REK-Swiss (Bern): Data Engineer / Data Analy... | JOIN</a></h5> 
 <p><span class="badge badge-light">Bern, Schweiz</span></p>
 <p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://www.workable.com/j/D7AC576228'>Data Engineer (Contract To Hire) - Trantor Software</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 16, 2019 ... About TrantorFounded in 2009, Trantor is a leading software services company 
+headquartered in Menlo Park, California. We deliver innovative technology?...</p>
+<hr/>
+<h5><a href='https://apply.workable.com/frichti/j/B17E5A6B43/'>BI / Data Engineer (H/F) - Frichti</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>14 oct. 2019 ... En tant que BI / Data Engineer, vous rejoignez l'?quipe Data compos?e de data 
+analysts et data scientists. Sous la supervision du Head of Data, votre r?le est?...</p>
+<hr/>
+<h5><a href='https://apply.workable.com/truedata/j/34914E9205'>Data Engineer - TrueData</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 15, 2019 ... TrueData is a leading mobile data platform that works with app publishers who 
+generate mobile data and the apps, agencies, brands, and ad tech companies?...</p>
+<hr/>
+<h5><a href='https://apply.workable.com/10pearls/j/2CD6820499/'>Data Engineer - 10Pearls</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 18, 2019 ... We are looking for a ?Data Engineer?. Ideal candidate should have a Bachelor's 
+degree in Computer Science with 2 ? 3 years of programming experience on?...</p>
+<hr/>
+<h5><a href='https://apply.workable.com/10pearls/j/2CD6820499/apply/'>Data Engineer - 10Pearls</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 16, 2019 ... 10Pearls is an end-to-end digital technology services partner that helps 
+businesses with innovative product development, digitalization of existing 
+business?...</p>
+<hr/>
+<h5><a href='https://apply.workable.com/sirionlabs/j/210A498A51/'>Data Engineer - 080519 - SirionLabs Pvt Ltd</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>4 days ago ... Responsibilities for Data Engineer. Create and maintain optimal data pipeline 
+architecture,; Identify, design, and implement internal process improvements:?...</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qb59Vfw4&k=Job&j=oEcibfw3&__jvst=Employee+Referral&__jvsd=suXs5iwL&__jvsc=Twitter&bid=nnBcnMwO'>Infoblox Careers - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light">Burnaby</span></p>
@@ -147,7 +178,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Nine/743999698335573-senior-data-engineer'>Nine Senior Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Nine/743999698335573-senior-data-engineer'>Nine Senior Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Australia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -173,7 +204,7 @@
 <p><span class="badge badge-light">San Mateo, CA San Mateo</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698330287-sr-big-data-engineer'>TitanData Inc. Sr. Big Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698330287-sr-big-data-engineer'>TitanData Inc. Sr. Big Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -221,11 +252,11 @@
 <p><span class="badge badge-light">Copenhagen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/VISIAN/743999698277725-data-engineer'>VISIAN Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VISIAN/743999698277725-data-engineer'>VISIAN Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698267845-data-engineer-equipe-recommandation-f-h'>Adevinta Data Engineer / Equipe recommandation F-H | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698267845-data-engineer-equipe-recommandation-f-h'>Adevinta Data Engineer / Equipe recommandation F-H | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -281,7 +312,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Apply to Software Data Engineering Manager at Welltok in Boston, MA.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ngdata.com/3935edb9-2498-4a3c-9c9f-74dd9add7fb0'>NGData - Big Data Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/ngdata.com/3935edb9-2498-4a3c-9c9f-74dd9add7fb0'>NGData - Big Data Engineer</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -326,7 +357,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/addepar1/jobs/4496209002'>Job Application for Data Engineer - BI / Analytics  at Addepar</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/addepar1/jobs/4496209002'>Job Application for Data Engineer - BI / Analytics  at Addepar</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -334,7 +365,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">Kansas City, MO</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=okpI9fwk&__jvst=Employee&__jvsd=sPcd2gw1&__jvsc=Twitter&bid=nE8glMwE'>Schneider Electric NAM Careers - NAM Enterprise IT Data Services - Data Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=okpI9fwk&__jvst=Employee&__jvsd=sPcd2gw1&__jvsc=Twitter&bid=nE8glMwE'>Schneider Electric NAM Careers - NAM Enterprise IT Data Services - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -406,7 +437,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/heycar/jobs/4494892002'>Job Application for Business Intelligence Senior Data Engineer (m/f/d) at heycar</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/heycar/jobs/4494892002'>Job Application for Business Intelligence Senior Data Engineer (m/f/d) at heycar</a></h5> 
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -432,7 +463,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oetkerdigital.join.com/jobs/454547-data-engineer'>Job @ Oetker Digital (Berlin): Data Engineer | JOIN</a></h5> 
+<h5><a href='https://oetkerdigital.join.com/jobs/454547-data-engineer'>Job @ Oetker Digital (Berlin): Data Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -458,31 +489,6 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <hr/>
 <h5><a href='https://jobs.lever.co/optimusride/dc2d83ea-b689-422c-88cb-9556df3aa2d4'>Optimus Ride - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Boston, MA  Boston</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nordcloud.join.com/jobs/448546-data-engineer'>Job @ Nordcloud (Munich): Data Engineer | JOIN</a></h5> 
-<p><span class="badge badge-light">Munich Munich Munich</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/gojek/d2e957eb-7e33-4956-9e2e-5af53a94355a'>Gojek - Data Engineer, Financial Services Platform</a></h5> 
-<p><span class="badge badge-light">Jakarta</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/tandemmoneylimited/jobs/4494532002'>Job Application for Data Engineer (Graduate) at Tandem Bank</a></h5> 
-<p><span class="badge badge-light">London, United Kingdom</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://miles-mobility.join.com/jobs/432526-data-engineer-w-m-x'>Data Engineer w/m/x | JOIN - Job @ MILES Mobility (Berlin)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>14. Okt. 2019 ... MILES Mobility has a job opening for Data Engineer w/m/x in Berlin (published: 
-02.05.2019). Apply now or check the other available jobs.</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/advent-software/job/oZTPafwB'>SS&C Advent Careers - Data Engineer</a></h5> 
-<p><span class="badge badge-light">Toronto, ON</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://clark.join.com/jobs/452119-data-engineer-m-f-x'>Job @ Clark Germany (Frankfurt): Data Engineer (m/... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
 
